@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+gconf_serverdir=@libexecdir@
 
 
 Name: gconf
