@@ -92,7 +92,7 @@ rm -rf $RPM_BUILD_ROOT
 %config(noreplace) %{sysconfdir}/gconf/schemas/*.schemas
 %dir	%{sysconfdir}/gconf/gconf.xml.defaults
 %dir	%{sysconfdir}/gconf/gconf.xml.mandatory
-%{prefix}/bin/gconfd-2
+%{prefix}/libexec/gconfd-2
 %{prefix}/bin/gconftool
 %{prefix}/bin/gconftool-2
 %{prefix}/lib/lib*.so.*
