@@ -1,3 +1,12 @@
+2002-07-11  Brian Cameron  <Brian.Cameron@sun.ie>
+
+	* gconf-2.0.pc.in
+	* gconf.spec.in
+	* gconf/Makefile.am
+	* gconf/gconfd.c
+	* gconf/gconf-internals
+	Now install gconfd-2 and gconf-sanity-check-2 in libexec
+
 2002-07-09  Mark McLoughlin  <mark@skynet.ie>
 
 	* gconf/gconfd.c: (obtain_database): fix
